--- a/UberApp-UberAppReset/Parse-Server-Starter-Project/ParseStarterProject/src/main/res/values/styles.xml
+++ b/UberApp-UberAppReset/Parse-Server-Starter-Project/ParseStarterProject/src/main/res/values/styles.xml
@@ -11,6 +11,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+            <item name="colorControlActivated">@color/common_google_signin_btn_text_dark_disabled</item>
     </style>
+
 
 </resources>
